--- a/donations/static/css/donations.css
+++ b/donations/static/css/donations.css
@@ -22,6 +22,10 @@
     margin-right: 1em;
     text-align:right;
  }
+
+#id_captcha_1 {
+	margin-left: 12em;
+}
  .field-wrapper{
     margin: 5px 0;
  }
@@ -118,23 +122,23 @@
 .t form.search-form input[type="text"] {
 	width: 60%;
 	margin-bottom: 10px;
-	padding: 5px;	
+	padding: 5px;
 }
 
 .t form.search-form input[type="submit"] {
-	padding: 5px;	
+	padding: 5px;
 	cursor: pointer;
 }
 .donation-item-left{
-	float: left; 
+	float: left;
 	padding-right:2em;
 }
 
 #donation-receipt{
-	margin:2em auto; 
-	padding:1em; 
-	text-align: center; 
-	width: 400px; 
+	margin:2em auto;
+	padding:1em;
+	text-align: center;
+	width: 400px;
 	border: 1px solid #9F0909;
 	background-color: #f0f0ee;
 }
