--- a/donations/templates/donations/nav.html
+++ b/donations/templates/donations/nav.html
@@ -17,9 +17,9 @@
 <li class="dropdown" data-dropdown="dropdown">
     <a href="#" class="dropdown-toggle">{% trans "Tendenci" %}</a>
     <ul class="dropdown-menu">
-        <a href="{% url dashboard %}" title="Tendenci Home Page">{% trans "Dashboard" %}</a>
-        <li><a href="{% url profile.index %}">{% trans "My Profile" %}</a></li>
-        <li><a href="{% url auth_logout %}">{% trans "Log Off" %}</a></li>
+        <a href="{% url "dashboard" %}" title="Tendenci Home Page">{% trans "Dashboard" %}</a>
+        <li><a href="{% url "profile.index" %}">{% trans "My Profile" %}</a></li>
+        <li><a href="{% url "auth_logout" %}">{% trans "Log Off" %}</a></li>
     </ul>
 </li>
 {% endif %}
@@ -36,9 +36,9 @@
         <ul class="dropdown-menu">
     {% endif %}
         {% if can_edit_setting %}
-            <li><a href="{% url settings.index "module" "donations" %}">{% trans "Settings" %}</a></li>
-            <li><a href="{% url donation.search %}">Search</a></li>
-            <li><a href="{% url donation.add %}">Add</a></li>
+            <li><a href="{% url "settings.index" "module" "donations" %}">{% trans "Settings" %}</a></li>
+            <li><a href="{% url "donation.search" %}">Search</a></li>
+            <li><a href="{% url "donation.add" %}">Add</a></li>
         {% endif %}
     </ul>
     {% if nav_object %}
@@ -47,7 +47,7 @@
             <li class="heading">{% trans "This Donation" %}</li>
             <li class="divider"></li>
             {% if can_view_donation %}
-            <li><a href="{% url donation.view nav_object.id %}">View</a></li>
+            <li><a href="{% url "donation.view" nav_object.id %}">View</a></li>
             {% endif %}
         </ul>
         {% endif %}
