--- a/donations/templates/donations/view.html
+++ b/donations/templates/donations/view.html
@@ -24,13 +24,13 @@
 {% endif %}
 <div class="label">Invoice ID:</div>
 {% if donation.invoice %}
-	<div><a href="{% url invoice.view donation.invoice.id %}">{{ donation.invoice.id }}</a></div>
+	<div><a href="{% url "invoice.view" donation.invoice.id %}">{{ donation.invoice.id }}</a></div>
 {% else %}
 	<div>n/a</div>
 {% endif %}
 <div class="clear-left"></div>
 {% if donation.user %}
-<div class="label">User:</div><div><a href="{% url profile donation.user.username %}">{{donation.user.username }}</a></div>
+<div class="label">User:</div><div><a href="{% url "profile" donation.user.username %}">{{donation.user.username }}</a></div>
 <div class="clear-left"></div>
 {% endif %}
 <br />
