--- a/donations/templates/donations/add.html
+++ b/donations/templates/donations/add.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load donation_tags %}
 
-{% block title %}Make a Donation{% endblock %}
+{% block title %}{% trans 'Make a Donation' %}{% endblock %}
 
 {% block extra_head %}
 {{ block.super }}
@@ -11,16 +11,17 @@
 
 {% block body %}
 <div class="t">
-{% donation_nav request.user %}
 <div class="donation-add">
 
-<h1>Make a Donation</h1>
+<h1>{% trans 'Make a Donation' %}</h1>
+{% blocktrans %}
 <p>Complete the form below to make a donation.
 The required fields are marked with <em class="body-copy-alert">*</em>. <br />Thank You!</p>
+{% endblocktrans %}
 <br />
     {% if form.errors or captcha_form.captcha.errors %}
         <div class="errors">
-            <p>Please review the fields below. Thank you.</p>
+            <p>{% trans 'Please review the fields below. Thank you.' %}</p>
             <ul>
             {% for field in form %}
                 {% if field.errors %}
@@ -28,7 +29,7 @@ The required fields are marked with <em class="body-copy-alert">*</em>. <br />Th
                 {% endif %}
             {% endfor %}
             {% if captcha_form.captcha.errors %}
-                	<li><a href="javascript:;">Captcha</a></li>
+                	<li><a href="javascript:;">{% trans 'Captcha' %}</a></li>
             {% endif %}
             </ul>
         </div>
@@ -69,7 +70,7 @@ The required fields are marked with <em class="body-copy-alert">*</em>. <br />Th
 <div class="clear-left"></div>
 
 <div class="section-header">
-    Billing Information
+    {% trans 'Billing Information' %}
 </div>
 
 <div class="field-wrapper">
@@ -177,7 +178,7 @@ The required fields are marked with <em class="body-copy-alert">*</em>. <br />Th
 <div class="clear-left"></div>
 
 <div class="section-header">
-    Other Information
+    {% trans 'Other Information' %}
 </div>
 
 <div class="field-wrapper">
@@ -210,7 +211,7 @@ The required fields are marked with <em class="body-copy-alert">*</em>. <br />Th
 {% endif %}
 
 <div class="submitbutton">
-<input type="submit" name="submit" value="Submit" />
+<input type="submit" name="submit" value="{% trans 'Submit' %}" />
 </div>
 <div class="clear-right"></div>
 </form>
