--- a/donations/templates/donations/search.html
+++ b/donations/templates/donations/search.html
@@ -5,8 +5,9 @@
 {% load base_tags %}
 {% load base_filters %}
 {% load perm_tags %}
+{% load i18n %}
 
-{% block title %}Donation Search{% endblock %}
+{% block title %}{% trans 'Donation Search' %}{% endblock %}
 {% block meta_description %}{{ block.super }}{% endblock %}
 {% block meta_keywords %}{{ block.super }}{% endblock %}
 
@@ -18,11 +19,11 @@
 {% block body %}
 <div class="t">
 {% donation_nav request.user %}
-    <h1>{% firstof MODULE_DONATIONS_LABEL 'Donations' %} Search</h1>  
+    <h1>{% firstof MODULE_DONATIONS_LABEL trans 'Donations' %} {% trans 'Search' %}</h1>
 
 	{% donation_search %}
     {% autopaginate donations 10 %}
-	
+
 	<div class="donations-wrap">
     {% for donation in donations %}
 		{% with donation|get_object as donation %}
@@ -30,36 +31,36 @@
     	{% if can_view %}
 		<div class="donation-wrap-search">
 
-            <h2><a href="{% url "donation.view" donation.id %}">{{ donation.first_name}} {{ donation.last_name }}</a></h2>
+            <h2><a href="{% url 'donation.view' donation.id %}">{{ donation.first_name}} {{ donation.last_name }}</a></h2>
             {% if donation.user %}
-            	<div class="donation-item-left"><a href="{% url "profile" donation.user.username %}">{% avatar donation.user 56 %}</a></div>
+            	<div class="donation-item-left"><a href="{% url 'profile' donation.user.username %}">{% avatar donation.user 56 %}</a></div>
             {% endif %}
             <div class="donation-item-right">
-	            <div class="content">Invoice: 
+	            <div class="content">{% trans 'Invoice:' %}
 	            {% if donation.invoice %}
-	            	<a href="{% url "invoice.view" donation.invoice.id %}">{{ donation.invoice.id }}</a>
+	            	<a href="{% url 'invoice.view' donation.invoice.id %}">{{ donation.invoice.id }}</a>
 	            {% else %}
 	            	n/a
 	            {% endif %}
 	            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	            Amount: <b>{{ donation.donation_amount|format_currency }}</b>
+	            {% trans 'Amount:' %} <b>{{ donation.donation_amount|format_currency }}</b>
 	            </div>
-				
+
 				{% if donation.allocation %}
-					<div class="content">Donate to: {{ donation.allocation }}</div>
+					<div class="content">{% trans 'Donate to:' %} {{ donation.allocation }}</div>
 				{% endif %}
-				<div class="content">Payment Method: {{ donation.payment_method }}</div>	
+				<div class="content">{% trans 'Payment Method:' %} {{ donation.payment_method }}</div>
 			</div>
-			<div class="clear-left"></div>		
+			<div class="clear-left"></div>
 			<div class="meta">
-            	<div class="submitted">Created: {{ donation.create_dt|date:"long" }}</div>
+            	<div class="submitted">{% trans 'Created:' %} {{ donation.create_dt|date:"long" }}</div>
             </div>
 		</div>
 		{% endif %}
 		{% endwith %}
 	{% empty %}
-		<div>0 Results Found</div>
+		<div>{% trans '0 Results Found' %}</div>
     {% endfor %}
 	</div>
 
