change {% block body to {% block content to match with the change in core

--- a/donations/templates/donations/search.html
+++ b/donations/templates/donations/search.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="{{ STATIC_URL }}css/donations.css">
 {% endblock %}
 
-{% block body %}
+{% block content %}
 <div class="t">
     <h1>{% firstof MODULE_DONATIONS_LABEL trans 'Donations' %} {% trans 'Search' %}</h1>
 
