--- a/donations/templates/donations/add.html
+++ b/donations/templates/donations/add.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="{{ STATIC_URL }}css/donations.css">
 {% endblock %}
 
-{% block body %}
+{% block content %}
 <div class="t">
 <div class="donation-add">
 
