--- a/donations/templates/donations/view.html
+++ b/donations/templates/donations/view.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="{{ STATIC_URL }}css/donations.css">
 {% endblock %}
 
-{% block body %}
+{% block content %}
 <div class="t">
 <h1>{% trans 'View a Donation' %}</h1>
 <div class="donation-view">
