changed files to be use for sponsorship instead of donations

--- a/donations/templates/donations/receipt.html
+++ b/donations/templates/donations/receipt.html
@@ -2,7 +2,7 @@
 "http://www.w3.org/TR/html4/loose.dtd"> 
 <html>
 <head>
-<title>Donation Receipt</title>
+<title>Sponsorship Receipt</title>
 <link rel="stylesheet" href="{{ THEME_URL }}media/css/styles.css" type="text/css" />
 <link rel="stylesheet" href="{{ STATIC_URL }}css/donations.css" type="text/css" />
 </head>
