--- a/donations/templates/donations/base.html
+++ b/donations/templates/donations/base.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% block title %}{% trans 'Donation' %}{% endblock %}
+{% block title %}{% trans 'Sponsorship' %}{% endblock %}
 
 {% block top_bar %}
 {% if request.user.is_authenticated %}
