--- a/donations/templates/donations/invoice_view_display.html
+++ b/donations/templates/donations/invoice_view_display.html
@@ -2,14 +2,17 @@
 {% load i18n %}
 
 <td>
-    <td>
-		{% if obj %}
-			{% trans 'Donation #' %}<a href="{% url 'donation.view' obj.id %}" title="{% trans 'View Donation' %}">{{  obj.id }}</a> from {{  obj.first_name }} {{ obj.last_name}} ({{  obj.email }})
-		{% else %}
-			{% trans 'Donation information not available' %}
-		{% endif%}
-	</td>
-	<td class="td-right">
-	    {{ invoice.total|format_currency }}
-	</td>
+<td>
+    {% if obj %}
+    {% trans 'Sponsorship #' %}
+    <a href="{% url 'donation.view' obj.id %}" title="{% trans 'View Sponsorship' %}">
+        {{ obj.id }}
+    </a> from {{ obj.first_name }} {{ obj.last_name}} ({{ obj.email }})
+    {% else %}
+        {% trans 'Sponsorship information not available' %}
+    {% endif%}
 </td>
+<td class="td-right">
+    {{ invoice.total|format_currency }}
+</td>
+
